fix z-index of main button

--- a/hw1/stylesheet.css
+++ b/hw1/stylesheet.css
@@ -50,7 +50,7 @@ button.main-button {
     bottom: 0;
 }
 #participate {
-    z-index: 31;
+    z-index: 30;
     position: fixed;
 }
 button.main-button img {
